# gaia

./: .gitignore  LICENSE  README.md  app.py  requirements.txt  test.py
etc/: config.yml
src/: api_manager.py  console.py  core.py  dojo.py  feed.py  game_env.py  logger.py  oms.py  py_streams.py
src/adapters/: HyperLiquid_api.py  base_adapter.py  post_client.py  ws_client.py
src/adapters/HyperLiquid/: HyperLiquid_api.py  endpoints.py  utils.py
src/adapters/Kraken/: Kraken_api.py
src/adapters/w3_utils/: web3_utils.py
src/database/: db_manager.py  tables.sql
src/models/: game_env.py
src/models/tet/: ddqn.py  lob.py  moe.py  rnn.py  tet.py
src/streams/: Cargo.toml
src/streams/benches/: ring_bench.rs
src/streams/etc/: zmq_config.yml
src/streams/src/: lib.rs  main.rs  structs.rs
src/streams/src/dataflow/: example.rs  feed.rs  mod.rs  processor.rs  to_streams.rs
src/streams/src/redis_manager/: cache.rs  event_bus.rs  mod.rs  redis_clients.rs
src/streams/src/ring_buffer/: mod.rs
src/streams/src/zeromq/: mod.rs
src/utils/: math.py  ring_buffer.py  time.py  visualizer.py
src/zeromq/: data.proto  data_pb2.py  zeromq.py
tests/: console_test.py  dojo_test.py  feed_test.py
